[package]
name = "barreleye-client"
description = "Barreleye driver for Rust."
repository = "https://github.com/barreleye/barreleye.rs"
documentation = "https://docs.rs/barreleye-client"
homepage = "https://barreleye.com"
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["barreleye"]

[dependencies]
derive_more = "0.99.17"
serde_json = "1.0.96"
serde_derive = "1.0.163"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11.18", features = ["rustls-tls", "json"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std", "serde"] }
