[package]
name = "barreleye-client"
description = "Barreleye driver for Rust."
repository = "https://github.com/barreleye/barreleye.rs"
documentation = "https://docs.rs/barreleye-client"
homepage = "https://barreleye.com"
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["barreleye"]

[dependencies]
derive_more = "0.99.17"
serde_json = "1.0.105"
serde_derive = "1.0.185"
serde = { version = "1.0.185", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.19", features = ["rustls-tls", "json"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std", "serde"] }
